@@ -4,6 +4,7 @@ Revision history for WWW-Scraper-ISBN-WHSmith_Driver
         - test data update.
         - fixed distribution name in META.
         - upgrade to WWW-Scraper-ISBN-1.00.
+        - conversion routines now moved to WWW::Scraper::ISBN::Driver.
 
 0.05    2013-11-10
         - added isbn-check.pl to examples.
